# confconv

./: README.md  pyproject.toml
confconv/: cli.py  converters.py  utils.py
